# logc

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.txt  ruff.toml
logc/: __init__.py  custom_logger.py
tests/: test_custom_logger.py
