[tool.poetry]
name = "logc"
version = "0.1.1"
description = "A powerful and flexible custom logging package for Python, enhancing standard logging with Pydantic integration, automatic function call logging, and customizable formatting options."
readme = "README.md"
authors = ["Ed Powers <ed.a.powers@gmail.com>"]
license = "MIT"
homepage = "https://github.com/edpowers/logc"
repository = "https://github.com/edpowers/logc"
keywords = ["logging", "pydantic", "custom-logger"]
packages = [{ include = "logc" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
    "Intended Audience :: Developers",
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
mypy = "^1.11.2"
pyright = "^1.1.381"
autoflake = "^2.3.1"
pre-commit = "^3.8.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
twine = "^5.1.1"
poetry = "^1.8.3"
coverage = "^7.6.1"
ruff = "^0.6.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pydantic.*:"
]
